Fixed the position of the overlapping button in audiobooks section

--- a/css/audio.css
+++ b/css/audio.css
@@ -298,6 +298,11 @@ hr {
   -moz-transition: ease-out 0.5s;
 }
 
+#psy{
+  margin-bottom: 3px;
+  font-size: 14px;
+}
+
 
 .btn.btn-border::after,
 .btn.btn-border::before {
